--- a/styles.css
+++ b/styles.css
@@ -1,21 +1,43 @@
-  ul {
-        list-style-type: none;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        <!-- background-color: black; -->
-        height: 40vh;
-        width: 80%;
-        flex-wrap: wrap;
-      }
-      li {
-        font-size: 1.5em;
-        background-color: lightgrey;
-        flex: 1;
-        text-align: center;
-        <!-- margin: 10px; -->
-        padding: 5px;
-        border: 10px solid black;
-        <!-- width: 60%; -->
+ul {
+  list-style-type: none;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  <!-- background-color: black; -->
+  height: 40vh;
+  width: 80%;
+  flex-wrap: wrap;
+}
+li {
+  font-size: 1.5em;
+  background-color: lightgrey;
+  flex: 1;
+  text-align: center;
+  <!-- margin: 10px; -->
+  padding: 5px;
+  border: 10px solid black;
+  <!-- width: 60%; -->
 
-      }
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.item {
+  flex: 1;
+}
+
+button {
+  background-color: #00add0;
+  color: white;
+  border-radius: 7px;
+  padding: 5px;
+}
+
+.trains {
+  list-style-type: none;
+}
