--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,8 @@
 ul {
   list-style-type: none;
-  display: flex;
   flex-direction: column;
   align-items: center;
   height: 40vh;
-  width: 80%;
   flex-wrap: wrap;
 }
 
@@ -15,6 +13,7 @@ li, #North, #South {
   text-align: center;
   padding: 5px;
   border: 10px solid black;
+  margin-bottom: 5px;
 }
 
 .container {
